WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25041
HTMLMediaElement: OSX autoplay broken by
r41907
https://bugs.webkit.org/show_bug.cgi?id=25041
Summary
HTMLMediaElement: OSX autoplay broken by r41907
Eric Carlson
Reported
2009-04-03 15:47:36 PDT
'autoplay' starts when the ready state reaches HAVE_ENOUGH_DATA but the OSX media engine doesn't set readyState to HAVE_ENOUGH_DATA until the entire file has been loaded.
Attachments
proposed patch
(2.60 KB, patch)
2009-04-03 15:56 PDT
,
Eric Carlson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2009-04-03 15:48:17 PDT
<
rdar://problem/6697754
>
Eric Carlson
Comment 2
2009-04-03 15:56:36 PDT
Created
attachment 29246
[details]
proposed patch
Simon Fraser (smfr)
Comment 3
2009-04-03 16:01:17 PDT
Comment on
attachment 29246
[details]
proposed patch r=me, but it would be nice if we could have LayoutTests to test slower loading movies.
Eric Carlson
Comment 4
2009-04-08 07:44:38 PDT
http://trac.webkit.org/changeset/42320
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug