2009-04-08  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=25041
        <rdar://problem/6697754>
        Bug 25041: HTMLMediaElement: OSX autoplay broken by r41907

        OSX media player should set readyState to HAVE_ENOUGH_DATA when the movie's load state
        reaches QTMovieLoadStatePlaythroughOK, not when the entire file has been downloaded,
        so autoplay can begin when it should.

        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
        (WebCore::MediaPlayerPrivate::updateStates): Set readState to
        HAVE_ENOUGH_DATA when QTMovie load state reaches QTMovieLoadStatePlaythroughOK.
        (WebCore::MediaPlayerPrivate::paint): Add braces missed in r42203.


Canonical link: https://commits.webkit.org/34374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42320 268f45cc-cd09-0410-ab3c-d52691b4dbfc